done with layout1

--- a/static/layout.css
+++ b/static/layout.css
@@ -1,39 +1,284 @@
 body
 {
-    margin-left: 0;
-}
-.navbar{
-    margin-top: -8px;
-    display: block;
-    text-align: center;
-    background-color: rgba(254, 165, 225, 0.9);
-    padding: 10px;
-    margin-right: -8px;
-    border-block: 1px white;
-    border-radius: 2px;
+    margin:0;
+    background-color: black;
     color: aliceblue;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+.row{
+    display: grid;
+}
+.main-heading{
+    border: 1px beige;
+    border-radius: 5px;
+    border-collapse: collapse;
+    border-style: outset;
+    margin: 10px;
+    padding: 3px;
+}
+#Home{
+    margin: 0;
+    margin-bottom: 15px;
+    color: white;
+    border: none;
+}
+#profile img{
+    width: 60px;
+    border-radius: 50%;
+}
+#dp{
+    width: 60px;
+    height: auto;
+    border-radius: 40%;
+}
+
+/* Clear floats after the columns */
+.row{
+    height: 100vh;
+   
+    display: grid;
+    grid-template-columns: 25% 50% 25%;
+    grid-template-areas:
+    "bowl content content2";
+    border-right: 2px #8e2525;    
+    
+}
+.col1{
+    padding: 15px;
+    border: 5px white;
+    border-width: 4px;
+    border-color: #e9b3b3;
+}
+.col2{
+
+    padding: 15px;
+
+    font: bolder;
+    overflow-x: hidden;
+    background-color: rgb(15, 14, 14);
+
+}
+.col3{
+
+    padding: 15px;
+
+    
+}
+#post{
+    border-top: 0px;
+    border-right: 0px;
+    border-left: 0px;
+    border-bottom: 2em ;
+
+    color: rgb(77, 75, 56);
+    padding: 7px;
+    margin: 5px;
+    text-align: center;
+    height: 40px;
+    border-bottom: 1px #707070;
+    width: 75%;
+    background-color:inherit;
+    text-align: start;
+
+}
+#post:focus{
+    border: none;
+    border-style: none;
+}
+.post-card-name{
+    border: #16181C;
+    border-radius: 12px;
+    background-color:rgba(28, 29, 31, 0.5);
+    padding: 5px 7px;
+    width: 50%;
+}
+.post-btn {
+    background-color: aqua;
+    border: none;
+    width: 20%;
+    border-radius: 15px;
+    height: 40px;
+}
+#post-form{
+    margin-top: 2px;
+    margin-left: 3px;
+    margin-bottom: 40px;
+    padding: 1px;
+
+}
+#Posts-cards{
+    margin: 10px;
+    padding: 14px 16px;margin-top: 40px;
+    border: 1px solid #707070;
+    border-radius: 10px;
+    display: block;
+    box-shadow: blue;
+    flood-color: aqua;
+    background-color:rgba(28, 29, 31, 0.5);
+    color: black;
+}
+#username-post{
+    margin-left: 2px;
+    padding: 1px;
+}
+#user-link{
+    font-stretch: expanded;
+    font-family: 'Times New Roman', Times, serif;
+    font-style: oblique;
+    font: bolder;
+    font-size: smaller;
+}
+#dp{
+    width: 60;
+    height: auto;
+    border-radius: 45%;
+}
+#post-image{
+    border-radius: 8px;
+    margin: 2px;
+    width: 100%;
+    height: auto;
+}
+#username{
+    margin-top: -4px;
+}
+#post-text{
+    margin-top: 2px;
+    margin-left: 3px;
+}
+#time-stamp{
+    padding: 1px;
+    margin: 2px;
+    font-size: smaller;
+    text-align: end;
+}
+.footer a{
+    font-size: larger;
+    font-weight: bold;
+    text-decoration: none;
+    color: #8e2525;
+    lighting-color: #e9b3b3;
+
+}
+.footer{
+    margin: 7px;
+    padding: 50px;
+    text-align: center;
+}
+
+/*side first column design*/
+ul{
+    list-style-type: none;
+    margin-left: -40px;
+}
+#logo{
+    margin-top: 10px;
     padding-bottom: 20px;
 }
-.navbar a{
-    margin: 2px 125px;
-    padding: 14px 16px;
+li a{
+    text-decoration: none;
+    color: #f6f6f6;
+    font-size: 1.5rem;
+    margin-left: 25px;
+}
+li{
+    padding: 12px 16px;
+    border-radius: 10px;
+    margin-top: 4px;
+}
+li:hover{
+    background-color: rgba(225, 230, 255, .1)
+}
+li:last-child{
+    margin-top: 200px;
+    margin-left: 0px;
+}
+button{
+    width: 90%;
+    align-self: center;
+    font-size: larger;
+    margin-top: 30px;
+    height: 40px;
+    border: 2px #707070;
+    border-radius: 15px;
+    background-color: rgba(60, 120, 1800, .9);
+}
+#profile{
+    margin-top: 120px;
+    
+}
+button:hover{
+    background-color: rgba(0, 128, 255, 0.9);
+    font-weight: bolder;
+    zoom: normal;
+}
+#card-line{
+    margin-left:-13px;
+    margin-right:-13px;
+    height: .01px;
+}
+a{
+    cursor: pointer;
 }
 
-a img{
-    border-radius: 10px;
-    box-shadow: inset;
-    float: none;
-    margin-bottom: -10px;
+/* Chat pane */
+#chat-user span{
+    font:bolder;
+    font-style: oblique;
+    font-family: 'Times New Roman', Times, serif;
+    margin-left: 2px;
 }
-a i{
+#chat-user input[type=text]{
+    border: #16181C;
+    border-radius: 40px;
+    height: 40px;
+    margin-top: 5px;
+    width: 88%;
+    padding: 0px 14px;
+    margin-left: 8px;
+    margin-bottom: -8px;
+    background-color: #16181C;
+}
+#chat-user input[type=text]:hover{
+    border: #16181C;
+    border-radius: 40px;
+    border-color: #707070;
+    height: 45px;
+    margin-top: 5px;
+    width: 88%;
+    padding: 0px 14px;
+    margin-left: 8px;
+    margin-bottom: -8px;
+    background-color: #16181C;   
+}
+table{
+    background-color: #16181C;;
+    border: rgb(22, 24, 28);
+    border-radius: 12px;
+    width: 98%;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    margin-left: 10px;
+    margin-right: -20px;
+    max-height: 50%;
+}
+th{
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: start;
+    border-bottom: 2px;
+}
+tr{
+    overflow-wrap: break-word;
+    margin-bottom: 2px;
+    margin-left: 14px;
+    padding: 14px 24px;
+}
+img{
+    width: 60px;
+    border: #16181C;
+    border-radius: 8px;
+}
+td:hover{
+    background-color: rgba(28, 29, 31, 0.9)
+}
 
-    border-radius: 10px;
-    box-shadow: inset;
-    float: none;
-    margin-bottom: -10px;
-}
-.navbar a:hover{
-    margin: 2px 125px;
-    padding: 14px 16px;
-    background-color: rgba(124, 28, 32, 0.2);
-}
